
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errno ;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,char const*) ;
 int perror (char const*) ;
 int printf (char*) ;
 int stderr ;
 int stdout ;

void fatal(const char *msg)
{
    printf("\n");
    if (!errno) {
 fprintf(stderr, "FATAL ERROR: %s\n", msg);
    } else {
 perror(msg);
    }
    printf("\n");
    fflush(stdout);
    fflush(stderr);
    exit(129);
}
